<resources>
    <string name="app_name">WTE</string>
    <string name="class_title">全部</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="class_set">分類</string>
    <string name="lattice">格子趣</string>
    <string name="hot">熱門餐廳</string>
    <string name="slot">拉霸Fun</string>
    <string name="today">今日推薦</string>
    <string name="article">最新餐廳</string>


    <string name="db_time">用餐時間</string>
    <string name="db_addr">地址</string>
    <string name="db_name">店名</string>
    <string name="db_menu">菜單</string>
    <string name="db_push">推文</string>
    <string name="db_class">餐廳類別</string>
    <string name="db_star">評價</string>

    <string name="pick_image">Pick image</string>
    <string name="choose_image_upload_status_uploading">uploading…</string>
    <string name="choose_image_upload_status_success">uploaded success.</string>
    <string name="choose_image_upload_status_failure">failed.</string>
    <string name="imgur_upload_error">Error uploading image to Imgur. Please try again later.</string>

    <string name="discard_title">Discard</string>
    <string name="discard_question">Discard the upload?</string>
    <string name="yes_discard">Yes, discard</string>
    <string name="Cancel">Cancel</string>

    <string name="logged_in">Logged in.</string>
    <string name="logged_out">Logged out.</string>

    <string name="link_label">Link</string>
    <string name="copied_link">Copied link to clipboard.</string>

    <string name="ok">上傳</string>
    <string name="wte">推薦餐廳至WTE</string>

    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊新帳號</string>

    <string name="splash">連線中</string>
    <string name="title_activity_item">item</string>

    <string name="des_resp">全部回應</string>
    <string name="des_no">沒有更多回應了</string>
    <string name="title_activity_response">回應</string>
    <string name="response_content">-- 回覆內文或評論 --</string>

    <string name="discount">優惠</string>
    <string name="info">資訊</string>
    <string name="comment">評論</string>

    <string name="title_activity_gallery_click">菜單</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>
