<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/account"
        style="@style/DefTextInputLayout"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/data_account"
            style="@style/DefEditText"
            android:hint="@string/account"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        style="@style/DefTextInputLayout"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/data_password"
            style="@style/DefEditText"
            android:hint="@string/password"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/ususal_used"
        android:textColor="#f5f5f5"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#55B36C"
        android:textSize="15sp"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:onClick="register"/>

</LinearLayout>